Ensure that the search results list covers the full height of the screen

--- a/app/styles/components/list.scss
+++ b/app/styles/components/list.scss
@@ -1,6 +1,7 @@
 .list {
   padding: 83px $padding $padding;
   background-color: $bd-lighter-gray;
+  height: 100vh;
 }
 
 .list-item {
